quiet fprint output; c++ example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,9 @@ find_package(SDL REQUIRED)
 include_directories(SYSTEM ${SDL_INCLUDE_DIR})
 include_directories(${CMAKE_SOURCE_DIR}/include)
 
+add_executable(player examples/player.cpp src/libcsidlight.c)
 add_executable(csidl examples/csid.c src/libcsidlight.c)
 add_executable(csid examples/csid.c src/libcsidfull.c)
+target_link_libraries(player ${SDL_LIBRARY})
 target_link_libraries(csidl ${SDL_LIBRARY})
 target_link_libraries(csid ${SDL_LIBRARY})
