--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,14 +3,12 @@ project(cppsid)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_EXTENSIONS NO)
 
-# to use ppsid c++ wrapper, copy the following to CMakeLists.txt
-# --- from here ----
-find_package(SDL REQUIRED)
-include_directories(SYSTEM ${SDL_INCLUDE_DIR})
-include_directories(${CMAKE_SOURCE_DIR}/include)
+list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR})
+find_package(SDL2 REQUIRED)
+
 add_library(cppsid STATIC src/libcsidlight.c src/cppsid.cpp)
-target_link_libraries(cppsid ${SDL_LIBRARY})
-# --- to here ---
+target_link_libraries(cppsid SDL2::Main)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 # c++ example using cppsid wrapper library
 add_executable(player examples/player.cpp)
@@ -20,5 +18,5 @@ target_link_libraries(player cppsid)
 add_executable(csidl examples/csid.c src/libcsidlight.c)
 add_executable(csid examples/csid.c src/libcsidfull.c)
 set_target_properties(csid PROPERTIES EXCLUDE_FROM_ALL TRUE)
-target_link_libraries(csidl ${SDL_LIBRARY})
-TARGEt_link_libraries(csid ${SDL_LIBRARY})
+target_link_libraries(csidl SDL2::Main)
+TARGEt_link_libraries(csid SDL2::Main)
